--- a/MyTikTokBackup.Core/MyTikTokBackup.Core.csproj
+++ b/MyTikTokBackup.Core/MyTikTokBackup.Core.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\UI\**" />
+    <EmbeddedResource Remove="Models\UI\**" />
+    <None Remove="Models\UI\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AsyncCollections" Version="2.0.0" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Enums.NET" Version="4.0.0" />
@@ -16,10 +22,6 @@
     <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="5.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\UI\" />
   </ItemGroup>
 
 </Project>
