--- a/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop.csproj
+++ b/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop.csproj
@@ -11,11 +11,11 @@
 
   <ItemGroup>
 	<PackageReference Include="AutoMapper" Version="10.1.1" />
-	<PackageReference Include="Flurl" Version="3.0.1" />
-	<PackageReference Include="Flurl.Http" Version="3.0.1" />
-	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
-	<PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.0.0-preview4" />
-	<PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.3-rc7" />
+	<PackageReference Include="Flurl" Version="3.0.2" />
+	<PackageReference Include="Flurl.Http" Version="3.2.0" />
+	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+	<PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.0.2" />
+	<PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.3" />
 	<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />  
     <PackageReference Include="Microsoft.ProjectReunion" Version="0.5.0" />
     <PackageReference Include="Microsoft.ProjectReunion.Foundation" Version="0.5.0" />
