--- a/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop.csproj
+++ b/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows10.0.19041.0</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RootNamespace>MyTikTokBackup.Desktop</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Platforms>x86;x64;arm64</Platforms>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
+    <UseWinUI>true</UseWinUI>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Views\FoldersPage.xaml" />
@@ -18,29 +19,16 @@
 	<PackageReference Include="Flurl" Version="3.0.2" />
 	<PackageReference Include="Flurl.Http" Version="3.2.0" />
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
-	<PackageReference Include="Microsoft.ProjectReunion" Version="0.8.1" />
-	<PackageReference Include="Microsoft.ProjectReunion.Foundation" Version="0.8.1" />
-	<PackageReference Include="Microsoft.ProjectReunion.WinUI" Version="0.8.1" />
-	<PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.0.2" />
-	<PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.3" />
+	<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.194" />
+	<PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
+	<PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.8" />
 	<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\MyTikTokBackup.WindowsUWP\MyTikTokBackup.WindowsUWP.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Page Update="Views\ProfileVideosPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Page Update="Views\FoldersPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
 
 </Project>
